--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 					<h1>Hi, I am David Wong.<br />Welcome to My Blog~~</h1>
 					<p>Nothing Here<br />
 					Still Under Processing<br />
-					Btw I am a CS student who don't know how to code.</p>
+					Btw I am a CS student who don't know how to code.<br />
+					Don't study CS, no lunch time</p>
 				</div>
 			</section>
 
