--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 			<section id="header">
 				<div class="inner">
 					<span class="icon solid major fa-cloud"></span>
-					<h1>Hi, I am David Wong.<br />Welcome to My Blog~~</h1>
+					<h1>Hi, I am David Wong.<br />Welcome to My Blog.</h1>
 					<p>Nothing Here<br />
 					Still Under Processing<br />
-					Btw I am a CS student who don't know how to code.<br />
-					Don't study CS, no lunch time</p>
+					I am a CS student who don't know how to code. Yay<br />
+					YayYayYayYayYayYayYayYayYayYay
+					</p>
 				</div>
 			</section>
 
