--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<p>Nothing Here<br />
 					Still Under Processing<br />
 					I am a CS student who don't know how to code. Yay<br />
-					YayYayYayYayYayYayYayYayYayYay
+					OkOkOk
 					</p>
 				</div>
 			</section>
