--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 					<p>Sad, still nothing.</p>
 					<ul class="actions special">
 
-						<li><a href="#" class="button wide">Empty</a></li>
+						<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="button wide">Empty</a></li>
 					</ul>
 				</div>
 			</section>
