--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
 							<ul class="major-icons">
-								<li><span class="icon solid style1 major fa-code"></span></li>
-								<li><span class="icon solid style2 major fa-bolt"></span></li>
+								<li><span class="icon solid style1 major fa-vector-square"></span></li>
+								<li><span class="icon solid style2 major fa-duotone fa-cubes"></span></li>
 								<li><span class="icon solid style3 major fa-camera-retro"></span></li>
-								<li><span class="icon solid style4 major fa-cog"></span></li>
-								<li><span class="icon solid style5 major fa-desktop"></span></li>
-								<li><span class="icon solid style6 major fa-calendar"></span></li>
+								<li><span class="icon solid style4 major fa-regular fa-infinity"></span></li>
+								<li><span class="icon solid style5 major fa-solid fa-atom"></span></li>
+								<li><span class="icon solid style6 major fa-solid fa-seedling"></span></li>
 							</ul>
 						</div>
 						<div class="col-6 col-12-medium">
