--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<ul class="major-icons">
 								<li><span class="icon solid style1 major fa-vector-square"></span></li>
 								<li><span class="icon solid style2 major fa-duotone fa-cubes"></span></li>
-								<li><span class="icon solid style3 major fa-camera-retro"></span></li>
+								<li><span class="icon solid style3 major fa-meteor"></span></li>
 								<li><span class="icon solid style4 major fa-regular fa-infinity"></span></li>
 								<li><span class="icon solid style5 major fa-solid fa-atom"></span></li>
 								<li><span class="icon solid style6 major fa-solid fa-seedling"></span></li>
@@ -93,8 +93,8 @@
 						</div>
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
-							<h3>Photo 1</h3>
-							<p>This is Photo 1.<br/>
+							<h3>Photo 2</h3>
+							<p>This is Photo 2.<br/>
 							Cool.</p>
 						</p>
 							<ul class="actions special">
@@ -103,8 +103,8 @@
 						</div>
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<h3>Photo 1</h3>
-							<p>This is Photo 1.<br/>
+							<h3>Photo 3</h3>
+							<p>This is Photo 3.<br/>
 							Cool.</p>
 						</p>
 							<ul class="actions special">
@@ -450,10 +450,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://twitter.com/" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://www.facebook.com/" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+					<li><a href="https://www.instagram.com/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="https://github.com/waichung1105" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
