--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 					<p>Nothing Here<br />
 					Still Under Processing<br />
 					I am a CS student who don't know how to code. Yay<br />
+					HiHIHiHiHihi
 					
 					</p>
 				</div>
