--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<p>Nothing Here<br />
 					Still Under Processing<br />
 					I am a CS student who don't know how to code. Yay<br />
-					HiHIHiHiHihi
+					Anyway Nice To Meet You!
 					
 					</p>
 				</div>
